Date		Added
======
2008/02/13
	* Corrected a "donpcevent" missing a ":" in Cooking Quest. (bugreport:962) [Samuray22]
	* Corrected a Typo error in quest_prontera.txt. (bugreport:950)
2008/02/08
	* rev. 12188 Castle ownership displays at the start and end of WoE. [L0ne_W0lf]
	* Rev. 12187 Fixed a typo in the Lunar new year event. [L0ne_W0lf]
2008/02/07
	* Rev. 12183 Added Lunar new year event for 2008 from iRO. [L0ne_W0lf]
	- Please read the comments before enabling.
	* Rev. 12182 Updated some Airship/port npcs. [L0ne_W0lf]
	* Rev. 12181 Updated "Old Blue Box quest" and enabled it. [L0ne_W0lf]
	- This quest no longer gives unlimited Old Blue Boxes,
	  and was apparently never meant to.
2008/02/05
	* Corrected a bad duplicate name in Kafra Bank (Custom). (bugeport:921) [Samuray22]
	* Corrected a lot of ";;" Typo errors.
	-Some of this are in the bugreport:919
	* Corrected a Cutin Problem in Cooking Quest and a Delitem. (bugreport:911)
	* Corrected some typo error with "rouge". (bugreport:909)
	* Moved Custom Event folder to Custom Folder.
	* Corrected again the Cooking quest changed a close; to close2;
2008/01/31
	* Rev. 12156 Started fixing bugreport:899 and fixed bugreport:875 [L0ne_W0lf]
	* Rev. 12155 Updated Lighthalzen Town NPCs and Speed Potion quest. [L0ne_W0lf]
2008/01/20
	* Corrected one setcastledata call that I missed in r11915
2008/01/19
	* Fixed a bad countitem in cross band quest. (bugreport:840) [Samuray22]
2008/01/13
	* Corrected a bad Delitem in gunslinger quest (not job). (bugreport:763) [Samuray22]
	* Corrected a Double Welcome Message in Dungeon's Kafras. (bugreport:783)
	* Corrected a Typo error in MailBox. (bugreport:798)
2008/01/11
	* Rev. 12056 Added Veins town NPCs, mail box, and second guide. [L0ne_W0lf]
	- Updated warps for Veins. Outstanding warps are quest related.
	* Minor updates to other warp files.
2008/01/08
	* More official Cursed Abbey spawns [Playtester]
2008/01/06